# scholl-project-of-sulakarda

./: CMakeLists.txt  README.md  a.out  main.cpp
include/: FileIO.h  ai.hpp  chess.hpp  test.h
output/: game_save_2026-01-05_21-56-56.txt
scr/: test.cpp
src/: FileIO.cpp  ai.cpp  chess.cpp  main.cpp
